# prediction-market-quant

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  prediction-market-api-research.md  pyproject.toml
case/gold/: arb.py  markets.json
case/nba/: arb.py  nba.json
docs/: PF.md  PM_PF_DEMO.md
scripts/: arb_checker.py  generate_pm_creds.py  gold_arb_checker.py  nba_arb_checker.py  pf_market_lookup.py  place_order.py  pm_market_lookup.py  test_clients.py  test_market_order.py  test_opinion_connection.py  test_order.py  test_pf_connection.py  test_pf_order.py  test_pf_sdk.py  test_place_order.py  test_pm_connection.py  test_pm_order.py  test_pm_pf_demo.py
src/: __init__.py  config.py  exceptions.py  logging.py  lookup.py  main.py  models.py
src/clients/: __init__.py  base.py  opinion.py  polymarket.py  predictfun.py
src/engine/: __init__.py  arbitrage.py  executor.py
src/tests/: __init__.py  conftest.py  test_polymarket.py  test_polymarket_unit.py  test_predictfun.py  test_predictfun_unit.py
src/utils/: __init__.py  logger.py  telegram.py
tests/: __init__.py  test_arbitrage.py
